@@ -1,5 +1,8 @@
 2004-11-18  James Henstridge  <james@jamesh.id.au>
 
+	* jhbuild/utils/httpcache.py (Cache.read_cache): only add items to
+	the cache index if the actual file exists.
+
 	* doc/custom.xsl: some XSLT customisations.
 
 	* doc/jhbuild.css: some simple CSS to make the documentation look
